# aoc

./: .gitignore  Makefile  README  advent.cabal  aoc.ijs  cabal.project  load.ss  shell.nix
C/20/: 02.c  03.c  05.c  1.c  10.c  2.c  5.c  6.c  Makefile  advent.h  aoc.h
J/15/: 01.ijs  02.ijs  1.ijs  11.ijs  12.ijs  13.ijs  14.ijs  14.org  15.ijs  16.ijs  17.ijs  18.ijs  19.ijs  2.ijs  8.ijs  9.ijs  Day1  Day12.org  v18.ijs
J/16/: 02.ijs  04.ijs  05.ijs  1.ijs  10.ijs  13.ijs  15.ijs  16.ijs  18.ijs  19.ijs  2.ijs  20.ijs  3.ijs  4.ijs  6.ijs  7.ijs  8.ijs  9.ijs  Day4.org
J/17/: 01.ijs  02.ijs  07.ijs  21.ijs  7.ijs
J/18/: 04.ijs  1.ijs  10.ijs  11.ijs  12.ijs  13.ijs  14.ijs  18.ijs  2.ijs  3.ijs
J/19/: 01.ijs  02.ijs  07.ijs  08.ijs  09.ijs  1.ijs  10.ijs  12.ijs  14.ijs  16.ijs  19.ijs  2.ijs  22.ijs  24.ijs  3.ijs  4.ijs  5.ijs  6.ijs  8.ijs  9.ijs  Day1  Day10  Day12  Day16  Day22  Day3  Day6  Day8  intcode.ijs  v10.ijs
J/20/: 01.ijs  02.ijs  03.ijs  04.ijs  05.ijs  06.ijs  07.ijs  08.ijs  09.ijs  10.ijs  11.ijs  12.ijs  13.ijs  14.ijs  15.ijs  16.ijs  17.ijs  18.ijs  19.ijs  20.ijs  21.ijs  22.ijs  24.ijs  25.ijs  day3.org  sexp.ijs  vm8.ijs
J/21/: 01.ijs  02.ijs  03.ijs  04.ijs  05.ijs  06.ijs  07.ijs  08.ijs  09.ijs  10.ijs  11.ijs  12.ijs  13.ijs  14.ijs
J/22/: 01.ijs  02.ijs  03.ijs  04.ijs  05.ijs  06.ijs  07.ijs  08.ijs
J/23/: 01.ijs  02.ijs  03.ijs  06.ijs  07.ijs  08.ijs  09.ijs  11.ijs  14.ijs  15.ijs
code/: Advent.hs  Blank  biblio.ijs  biblio.ss  fetch.sh  graph.ss  intcode.ss  outils.ss  style-sheet.ss  svg.ss
corona/: 001.ijs  002.ijs
haskell/: Advent.hs
haskell/19/: 01.hs  1.hs  14.hs  24.hs  Day14
haskell/20/: 01.hs  02.hs  05.hs
haskell/Advent/: Loeb.hs  Write.hs
haskell/code/: Advent.hs
haskell/code/Advent/: Write.hs
input/16/: 22.in
input/17/: 21.in
input/18/: 9.in
input/19/: 12.in  14.in  15.in  16.in  17.in  18.in  19.in  20.in  21.in  24.in  3.in  30.in
input/2018/: 12.in  13.in  17.in
input/2019/: 1.in  14.in  22.in  5.in  6.in  8.in
input/2020/: 13.in  14.in  16.in  18.in  19.in  2.in  23.in  25.in
j/: scribbles.ijs
j/15/: 1.ijs  10.ijs  2.ijs
j/19/: 1.ijs  2.ijs  3.ijs  4.ijs  6.ijs  8.ijs  Day1  Day2  Day3  Day4  Day8
output/: intcode-bench.txt
python/23/: 04.py
racket/19/: 19.rkt  7.rkt  9.rkt  intcode.rkt
racket/23/: 05.rkt
scheme/15/: 01.ss  07.ss  10.ss  21.ss  23.ss  8.ss  Day7
scheme/17/: 22.ss  Day24
scheme/18/: 16.ss  7.ss
scheme/19/: 04.ss  05.ss  06.ss  09.ss  1.ss  10.ss  11.ss  12.ss  13.ss  14.ss  15.ss  16.ss  17.ss  18.ss  19.ss  2.ss  20.ss  21.ss  22.ss  23.ss  25.ss  3.ss  4.ss  5.ss  6.ss  7.ss  8.ss  9.ss  Day5  Day6  Intcode  ackermann.intcode  bench-intcode.ss  divmod.intcode  factor.intcode  isqrt.intcode  sum-primes.intcode
scheme/20/: 01.ss  02.ss  06.ss  08.ss  15.ss  19.ss  22.ss  23.ss
scheme/23/: 08.ss  15.ss
