cabal-version: 2.4
name:          advent
version:       0.1.0.0
author:        jitwit
category:      Puzzles
build-type:    Simple

common base
  default-language: Haskell2010
  build-depends: base

common ds
  default-language: Haskell2010
  build-depends:
    algebraic-graphs,
    array,
    containers,
    fingertree,
    groups,
    hashable,
    lens,
    MemoTrie,
    psqueues,
    unordered-containers,
    vector

common io
 default-language: Haskell2010
 build-depends: bytestring, filepath, trifecta, ansi-wl-pprint, JuicyPixels

library
  import: base, ds, io
  hs-source-dirs:
    haskell
  exposed-modules:
    Advent,
    Advent.Write
  build-depends:

executable 19-1
  import: base
  main-is:             1.hs
  build-depends:       advent
  hs-source-dirs:      haskell/19
  default-language:    Haskell2010

executable 19-14
  import: base, ds, io
  main-is:             14.hs
  build-depends:       advent
  hs-source-dirs:      haskell/19
  default-language:    Haskell2010
