cabal-version: 2.4
name:          advent
version:       0.1.0.0
author:        jitwit
category:      Puzzles
build-type:    Simple

common deps
  default-language: Haskell2010
  build-depends:
    base,
    algebraic-graphs,
    array,
    containers,
    fingertree,
    groups,
    hashable,
    lens,
    linear,
    MemoTrie,
    psqueues,
    unordered-containers,
    vector,
    bytestring,
    filepath,
    trifecta,
    ansi-wl-pprint,
    JuicyPixels

library
  import: deps
  hs-source-dirs:
    haskell
  exposed-modules:
    Advent,
    Advent.Write
  build-depends:

executable 19-1
  import: deps
  main-is:             01.hs
  build-depends:       advent
  hs-source-dirs:      haskell/19

executable 19-14
  import: deps
  main-is:             14.hs
  build-depends:       advent
  hs-source-dirs:      haskell/19

executable 19-24
  import: deps
  main-is:             24.hs
  build-depends:       advent
  hs-source-dirs:      haskell/19

executable 20-1
  import: deps
  main-is:             01.hs
  build-depends:       advent
  hs-source-dirs:      haskell/20

executable 20-2
  import: deps
  main-is:             02.hs
  build-depends:       advent
  hs-source-dirs:      haskell/20

executable 20-5
  import: deps
  main-is:             05.hs
  build-depends:       advent
  hs-source-dirs:      haskell/20
